[metadata]
name = pysher
version = attr: src.pysher.__VERSION__
description = Pusher websocket client for python, based on Erik Kulyk's PythonPusherClient
keywords = pusher, websocket, client
license_files = LICENSE
license = MIT
project_url = https://github.com/nlsdfnbch/pysher
author = Nils Diefenbach
author_email = nlsdfnbch.foss@kolabnow.com
classifiers =
    'Development Status :: 4 - Beta'
    'Environment :: Web Environment'
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3.5'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Topic :: Internet'
    'Topic :: Software Development :: Libraries '
    'Topic :: Software Development :: Libraries :: Python Modules'

[options.extras_require]
dev =
    pytest
    tox